<resources>
    <string name="app_name">Attendance Management</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="welcome_to_attendance_management_app">Welcome to Mobile Attendance System App</string>
    <string name="don_t_have_account_yet">Don\'t have Account Yet?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enrollment_no">Enrollment No</string>
    <string name="birthdate">Birthdate</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="admission_year">Admission Year</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="enrollment_no_loading">Enrollment No Loading...</string>
    <string name="branch">Branch</string>
    <string name="attendance">Attendance</string>
    <string name="subject_list">Subject List</string>
    <string name="subject_name_subject_code">Subject Name(Subject code)</string>
    <string name="subject_teacher">Subject Teacher</string>
    <string name="subject_name">Subject Name</string>
    <string name="attendance_pending">Attendance Pending..</string>
    <string name="attendance_history">Attendance History</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="logout">Logout</string>
</resources>
